[gd_scene load_steps=3 format=3 uid="uid://bixyjfsb5c04t"]

[ext_resource type="Script" uid="uid://c32212q1pbbb2" path="res://scenes/wnd_settings.gd" id="1_fynyq"]
[ext_resource type="Theme" uid="uid://dyoqwqakkfsn2" path="res://scenes/style_menu.tres" id="2_mu7tp"]

[node name="WndSettings" type="Window"]
oversampling_override = 1.0
title = "Settings"
position = Vector2i(0, 36)
size = Vector2i(400, 400)
script = ExtResource("1_fynyq")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mu7tp")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="i_listitems" type="SpinBox" parent="Panel/MarginContainer/GridContainer"]
layout_mode = 2
min_value = 4.0
value = 4.0

[node name="Label" type="Label" parent="Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Items per page"

[node name="i_previewsize" type="SpinBox" parent="Panel/MarginContainer/GridContainer"]
layout_mode = 2
min_value = 32.0
max_value = 1024.0
step = 2.0
value = 32.0

[node name="Label2" type="Label" parent="Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "size of preview images"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="bt_ok" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "OK"

[node name="bt_cancle" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Cancle"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/bt_ok" to="." method="_on_bt_ok_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/bt_cancle" to="." method="_on_bt_cancle_pressed"]
